--- a/assets/creator/AppPackBuildConfig.yaml
+++ b/assets/creator/AppPackBuildConfig.yaml
@@ -1,8 +1,7 @@
-name: MyExample calendar app
-id: myexample-calendar
+name: My example App
+id: ms-cmd
 version: 0.1.0
 description: This is an example app that will be packed for AppPack
-state: state.bin
 image: image.qcow2
 snapshot: OnClose
 readme:
@@ -23,21 +22,25 @@ base_command: >-
   -machine pc-q35-10.1,accel=kvm
   -rtc base=localtime,driftfix=slew
   -drive file=$IMAGE_FILE_PATH,if=virtio,format=qcow2
-  -netdev user,id=hostnet0,hostfwd=tcp::33890-:3389,hostfwd=udp::33890-:3389
   -device virtio-net-pci,netdev=hostnet0
   -device virtio-balloon-pci
   -usb -device usb-tablet
   -vga virtio
 install_append: >-
-  -display sdl
+  -netdev user,id=hostnet0
+  -display sdl,gl=on
   -drive file=installer.iso,media=cdrom
   -drive file=guest-addons.iso,media=cdrom
 configure_append: >-
-  -display none
+  -netdev user,id=hostnet0,hostfwd=tcp::$RDP_PORT-:3389,hostfwd=udp::$RDP_PORT-:3389
+  -display egl-headless,gl=on
   -qmp unix:qmp-appack.sock,server=on,wait=off
-freerdp_command: >-
+configure_freerdp: >-
   /v:localhost:$RDP_PORT
   /u:VmUser
   /p:VmPassword
   /cert:ignore
   +clipboard
+  +auto-reconnect
+  +menu-anims
+  +window-drag
